Updating profile page and adding functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
     </form>
   </div>
   <div class="wrapper" id="registerFormContent">
-    <form action="/register" method="post">
+    <form action="/register" method="post" enctype="multipart/form-data">
       <h1>Register</h1>
       <div class="input-box">
         <input type="file" placeholder="Profile" name="profile" required>
