--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,23 @@
     <link rel='stylesheet' href='/stylesheets/chat.css' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
-<body>
-    <main>
-        <div class="sideNav1">
 
-            <li class="active"><i class="fa-regular fa-comment-dots"></i></li>
-            <li><i class="fa-solid fa-phone"></i></li>
-            <li><i class="fa-solid fa-gear"></i></li>
-            <li><i class="fa-solid fa-trash-can"></i></li>
-            <li><i class="fa-regular fa-star"></i></li>
-            <li><i class="fa-solid fa-address-book"></i></li>
-        </div>
+<body>
+    <div class="sideNav1">
+
+        <li class="active">
+            <a href="/chat" style="text-decoration: none; color: black;">
+                <i class="fa-regular fa-comment-dots"></i>
+            </a>
+        </li>
+        <li><i class="fa-solid fa-phone"></i></li>
+        <li><i class="fa-solid fa-gear"></i></li>
+        <li><i class="fa-solid fa-trash-can"></i></li>
+        <li><i class="fa-regular fa-star"></i></li>
+        <li><a href="/profile" style="text-decoration: none; color: black;"><i class="fa-solid fa-address-book"></i></a>
+        </li>
+    </div>
+    <main>
         <div class="sideNav2">
             <div class="SideNavhead">
                 <h2>Chats</h2>
@@ -28,163 +35,128 @@
             <div class="SearchInputHolder">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input class="searchInput" placeholder="Search For Chat..">
-
                 <hr>
             </div>
-
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-            <li class="group">
-                <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                <p class="GroupName">David Johnson</p>
-                <p class="GroupDescrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earujdsajf djf df dfjdkj
-                    dlkjfl.kjl dlkjf lkjlkdjfm, sequi.</p>
-            </li>
-
+            <% posts.reverse().forEach(function (post){%>
+                <li class="group" onclick="submitForm('<%=post.postText%>')">
+                    <div class="avatar overflow-hidden p-0"><img src="/images/uploads/<%=post.user.profile%>" alt=""
+                            class="w-100 h-100 object-fit-cover"></div>
+                    <p class="GroupName">
+                        <%=post.postText%>
+                    </p>
+                    <p class="GroupDescrp">
+                        <%=post.question%>
+                    </p>
+                </li>
+                <%})%>
         </div>
         <section class="Chat">
             <div class="ChatHead">
                 <li class="group">
-                    <div class="avatar"><img src="imgs/Asset 1.svg" alt=""></div>
-                    <p class="GroupName">David Johnson</p>
-
+                    <div class="avatar"><img src="/images/uploads/aca0e581-63ab-4d43-9baf-1b0445b0188a.jpg" alt="">
+                    </div>
+                    <p class="GroupName">Topic</p>
                 </li>
-                <div class="callGroup">
-                    <i class="fa-solid fa-phone"></i>
-                    <i class="fa-solid fa-video"></i>
-
-                </div>
             </div>
             <div class="MessageContainer">
                 <span></span>
-                <div class="messageSeperator">Yesterday</div>
-                <div class="message me">
-                    <p class="messageContent">Hello!</p>
-                    <div class="messageDetails">
-                        <div class="messageTime">3:21 PM</div>
-                        <i class="fa-solid fa-check"></i>
-                    </div>
-                </div>
-                <div class="message me">
-                    <p class="messageContent">How are You!</p>
-                    <div class="messageDetails">
-                        <div class="messageTime">3:22 PM</div>
-                        <i class="fa-solid fa-check"></i>
-                    </div>
-                </div>
-                <div class="message you">
-                    <p class="messageContent">I'm Fine!</p>
-                    <div class="messageDetails">
-                        <div class="messageTime">3:30 PM</div>
-                        <i class="fa-solid fa-check"></i>
-                    </div>
-                </div>
-                <div class="message you">
-                    <p class="messageContent">How are You!</p>
-                    <div class="messageDetails">
-                        <div class="messageTime">3:32 PM</div>
-                        <i class="fa-solid fa-check"></i>
-                    </div>
-                </div>
-                <div class="message me">
-                    <p class="messageContent">I'm also Fine!</p>
-                    <div class="messageDetails">
-                        <div class="messageTime">3:36 PM</div>
-                        <i class="fa-solid fa-check"></i>
-                    </div>
-                </div>
-                <div class="message me">
-                    <p class="messageContent">Send Me the Pics!</p>
-                    <div class="messageDetails">
-                        <div class="messageTime">3:21 PM</div>
-                        <i class="fa-solid fa-check"></i>
-                    </div>
-                </div>
-                <div class="messageSeperator">Today</div>
-                <div class="message you">
-                    <p class="messageContent">Sorry for the Delay!</p>
-                    <div class="messageDetails">
-                        <div class="messageTime">8:09 AM</div>
-                        <i class="fa-solid fa-check"></i>
-                    </div>
-                </div>
-                <div class="message you">
-                    <p class="messageContent">Here are Pics!</p>
-                    <div class="messageDetails">
-                        <div class="messageTime">3:21 AM</div>
-                        <i class="fa-solid fa-check"></i>
-                    </div>
-                </div>
+                <div class="messageSeperator">No Message</div>
+            </div>
+
             </div>
             <form id="MessageForm">
-                <input type="text" id="MessageInput">
-                <button class="Send"><i class="fa-solid fa-paper-plane"></i></button>
+                <input type="text" id="MessageInput" placeholder="Enter Comments" name="comment">
+                <button onclick="sendComment()" class="Send"><i class="fa-solid fa-paper-plane"></i></button>
             </form>
         </section>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
+        integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        let clutter = "";
+        let clutter2 = "";
+        let postId = "";//----------------
+        let postText = "";//----------------
+        // function submitForm(url) {
+        //     axios.get(`/chat/${url}`).then(async function (data) {
+        //         clutter = `<div class="messageSeperator">${data.data.question}</div>`;
+        //         clutter2 = "";
+        //         postId = data.data._id;//---------------
+        //         const postWithComments = await postModel.findById(postId).populate('comments');
+        //         const comments = postWithComments.comments.reverse(); // Reverse comments if needed
+
+        //         comments.reverse().forEach(function (comm) {
+        //             clutter += `<div class="message you">
+        //                                 <p class="messageContent">${comm.commentText}</p>
+        //                                 <div class="messageDetails">
+        //                                     <div class="messageTime">3:30 PM</div>
+        //                                     <i class="fa-solid fa-check"></i>
+        //                                 </div>
+        //                             </div>`;
+        //         })
+        //         clutter2 = `<li class="group">
+        //             <div class="avatar"><img src="/images/uploads/${data.data.user.profile}" alt=""></div>
+        //             <p class="GroupName">${data.data.postText}</p>
+        //         </li>`;
+        //         document.querySelector(".MessageContainer").innerHTML = clutter;
+        //         document.querySelector(".ChatHead").innerHTML = clutter2;
+        //     })
+        // }
+        // // -----------------
+        async function submitForm(url) {
+            try {
+                const postData = await axios.get(`/chat/${url}`);
+                const post = postData.data.post;
+                const comments = postData.data.comments;
+                const user = postData.data.user;
+
+                clutter = `<div class="messageSeperator">${post.question}</div>`;
+                clutter2 = "";
+                postId = post._id;
+                postText = post.postText;
+
+                comments.forEach(function (comm) {
+                    clutter += `<div class="message you">
+                                <p class="messageContent">${comm.commentText}</p>
+                                <div class="messageDetails">
+                                    <div class="messageTime">3:30 PM</div>
+                                    <i class="fa-solid fa-check"></i>
+                                </div>
+                            </div>`;
+                });
+
+                clutter2 = `<li class="group">
+                                <div class="avatar overflow-hidden" style="padding: 0;"><img class ="object-fit-cover p-0" src="/images/uploads/${user.profile}" alt=""></div>
+                                <p class="GroupName">${post.postText}</p>
+                            </li>`;
+
+                document.querySelector(".MessageContainer").innerHTML = clutter;
+                document.querySelector(".ChatHead").innerHTML = clutter2;
+            } catch (error) {
+                console.error('Error fetching chat:', error);
+            }
+        }
+
+        function sendComment() {
+            const commentInput = document.getElementById("MessageInput").value;
+            if (!commentInput.trim()) {
+                return; // Don't send empty comments
+            }
+            axios.post('/comments', {
+                postId: postId,
+                comment: commentInput
+            }).then(function (response) {
+                // Handle successful comment submission
+                console.log('Comment submitted successfully:', response);
+                // Optionally, you can redirect to the same page
+                window.location.href = `/chat/${postText}`; // Redirect to chat page
+            }).catch(function (error) {
+                // Handle error
+                console.error('Error submitting comment:', error);
+            });
+        }
+    </script>
 </body>
+
 </html>
