--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -4,7 +4,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
     transition-duration: 0.25s;
 }
 
@@ -130,15 +129,14 @@ section {
 .searchInput {
     width: calc(100% - 40px);
     padding: 7px;
-    border: none;
     background-color: transparent;
     color: white;
     font-family: Roboto;
-    transition-duration: 0.25s;
     border-radius: 5px;
     padding-left: 30px;
     margin: 5px 20px;
     position: relative;
+    color: #b0b0b0;
 }
 
 .SearchInputHolder i {
@@ -146,11 +144,6 @@ section {
     bottom: 10px;
     left: 25px;
 }
-
-.searchInput::placeholder {
-    color: #b0b0b0;
-}
-
 .SearchInputHolder hr {
     content: "";
     width: calc(100% - 40px);
@@ -419,4 +412,66 @@ section {
 
 .p-0 {
     padding: 0;
+}
+
+#searchArea {
+    display: flex;
+    position: fixed;
+    z-index: 100;
+    width: 80%;
+    background: rgba(255, 255, 255, 0.45);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4.5px);
+    -webkit-backdrop-filter: blur(4.5px);
+    border-radius: 10px;
+    height: 80%;
+    padding: 3rem;
+    flex-direction: column;
+}
+#searchArea h1{
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+#searchInput{
+    width: 100%;
+    height: 2.5rem;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    border: 1px solid #00000021;
+}
+#searchResults{
+    width: 100%;
+    height: calc(100% - 2.5rem);
+    overflow: auto;
+}
+#searchResults a{
+    text-decoration: none;
+    color: black;
+}
+#searchResults a > div{
+    padding: 10px;
+    border-bottom: 1px solid #00000021;
+    cursor: pointer;
+    display: flex;
+}
+#searchResults a >div:hover{
+    background-color: #00000021;
+}
+#searchResults a div img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+#searchResults a div h3{
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+#searchResults a div p{
+    font-size: 1rem;
+    font-weight: 300;
 }
