--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -48,6 +48,10 @@ body {
   font-weight: 400;
 }
 
+.tabs li a{
+  text-decoration: none;
+  color: #fff;
+}
 .tabs li.active {
   border-bottom: 2px solid;
   border-image: var(--bg);
