--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -96,6 +96,7 @@
     </div>
     <div class="container p-0 w-75">
         <div class="row m-1 justify-content-center">
+            <h5 class="Question">Questions</h5>
             <% user.posts.forEach(function (post){%>
                 <div class="card p-0 mb-2">
                     <h5 class="card-header"><%=post.postText%></h5>
