--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -39,7 +39,6 @@ main {
     list-style: none;
     font-size: 1.5rem;
     box-shadow: var(--box-shadow);
-
     border-radius: 10px;
     align-items: center;
     width: calc(100% - 100px);
@@ -48,24 +47,31 @@ main {
     justify-content: center;
     height: fit-content;
     border: 1px solid #ffffff21;
+    transform: translate(0px, -100px)
 }
 
-
-
 .sideNav1 li {
-    padding: 13px 0px;
-    border-radius: 5px;
     cursor: pointer;
-    transition-duration: 0.27s;
     margin: 0px;
     width: calc(100% - 10px);
     font-size: 1.3rem;
     display: flex;
     justify-content: center;
+    transform: translate(0px, -100px)
+}
+.sideNav1 li a{
+    border-radius: 5px;
+    padding: 13px 0px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    text-decoration: none; 
+    color: black;
+    transition-duration: 0.27s;
 }
 
-.sideNav1 li:hover,
-.sideNav1 li.active {
+.sideNav1 li:hover a,
+.sideNav1 li a.active {
     color: #00f5d4;
     background-color: #00f5d424;
 }
