--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,52 +1,28 @@
 * {
   margin: 0;
-
   padding: 0;
-
   box-sizing: border-box;
-
   font-family: "Poppins", sans-serif;
 }
 
 body {
   display: flex;
-
   justify-content: center;
-
   align-items: center;
-
   min-height: 100vh;
-
-  background: url(https://images.unsplash.com/photo-1501975558162-0be7b8ca95ea?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MDk2NTI3NDJ8&ixlib=rb-4.0.3&q=85)
-    no-repeat;
-
+  background: url(https://images.unsplash.com/photo-1501975558162-0be7b8ca95ea?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MDk2NTI3NDJ8&ixlib=rb-4.0.3&q=85) no-repeat;
   background-size: cover;
-
   background-position: center;
 }
 
 .wrapper {
   width: 420px;
-
   background: transparent;
-
   border: 1px solid white;
-
   backdrop-filter: blur(4px);
-
-  color: #fff;
-
   border-radius: 12px;
-
   padding: 30px 40px;
-
   display: none;
-}
-
-.wrapper h1 {
-  font-size: 36px;
-
-  text-align: center;
 }
 
 .wrapper .input-box {
@@ -169,9 +145,9 @@ body {
   text-decoration: underline;
 }
 
-#loginForm:checked ~ #loginFormContent,
-#registerForm:checked ~ #registerFormContent,
-#forgotForm:checked ~ #forgotFormContent {
+#loginForm:checked~#loginFormContent,
+#registerForm:checked~#registerFormContent,
+#forgotForm:checked~#forgotFormContent {
   display: block;
 }
 
@@ -179,10 +155,269 @@ input[type="radio"] {
   display: none;
 }
 
-.error{
+.error {
   font-weight: 500;
   color: red;
   text-transform: capitalize;
   margin: 10px 0px;
   text-align: center;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+}
+
+:root {
+  --main-color: #fff;
+  --second-color: #347deb;
+  --box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  --facebook-color: rgb(60, 90, 154);
+  --google-color: rgb(220, 74, 61);
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  background-image: linear-gradient(310deg, #df98fa, #9055ff);
+  font-family: sans-serif;
+}
+
+#container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--main-color);
+  width: 1200px;
+  height: 800px;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+  box-shadow: var(--box-shadow);
+  transition-duration: 1s;
+}
+
+#left,
+#right {
+  margin: auto;
+  width: 95%;
+  height: 96%;
+  border-radius: 10px;
+}
+
+#left {
+  background-image: url("https://images.unsplash.com/photo-1615400014497-55726234cccb?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxNzg4Njg0Ng&ixlib=rb-1.2.1&q=85");
+  background-size: cover;
+  background-position: center;
+  box-shadow: var(--box-shadow);
+}
+
+#welcome,
+#lorem {
+  margin: 20px;
+  text-shadow: var(--box-shadow);
+}
+
+#welcome {
+  font-size: 75px;
+  font-weight: 300;
+  margin-top: 330px;
+  text-shadow: var(--box-shadow);
+}
+
+#login {
+  padding-top: 35%;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 100;
+  text-shadow: var(--box-shadow);
+}
+
+.client-info {
+  display: block;
+  margin: 18px auto;
+  width: 60%;
+  height: 50px;
+  border: solid #999 1px;
+  border-radius: 5px;
+  text-indent: 15px;
+  transition: all 200ms;
+  box-shadow: var(--box-shadow);
+  transform: translate(0px, -800px);
+}
+
+.check {
+  display: flex;
+  justify-content: flex-start;
+  height: 15px;
+  border: none;
+  box-shadow: none;
+}
+
+.check label {
+  background: transparent;
+  margin: 0;
+  padding-inline: 1rem;
+}
+
+.client-info:focus {
+  width: 80%;
+}
+
+#profile {
+  width: 4rem;
+  border-radius: 50%;
+  height: 4rem;
+  text-align: center;
+  background: inherit;
+  margin-block: 0px;
+}
+
+label {
+  position: absolute;
+  margin: -76px 130px;
+  font-size: 12px;
+  white-space: nowrap;
+  background: #fff;
+  padding: 0 5px;
+  color: #999;
+  transition: all 200ms;
+  text-shadow: var(--box-shadow);
+  transform: translate(0px, -800px);
+}
+
+#fullname:focus~label[for="fullname"] {
+  margin: -76px 70px;
+}
+
+#username:focus~label[for="username"] {
+  margin: -76px 70px;
+}
+
+#email:focus~label[for="email"] {
+  margin: -76px 70px;
+}
+
+#password:focus~label[for="password"] {
+  margin: -76px 70px;
+}
+
+#submit {
+  border: none;
+  background-color: #9055ff;
+  color: white;
+  width: 60%;
+}
+
+#submit:hover {
+  background-color: #df98fa;
+}
+
+.social {
+  background-color: #fff;
+  display: block;
+  margin: 10px auto;
+  width: 70%;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  text-transform: uppercase;
+  transition-duration: 200ms;
+  box-shadow: var(--box-shadow);
+  text-shadow: var(--box-shadow);
+}
+
+#facebook {
+  border: solid var(--facebook-color) 1px;
+  color: var(--facebook-color);
+}
+
+#facebook label a{
+  color: var(--facebook-color);
+  text-decoration: none;
+}
+
+#facebook:hover {
+  background-color: var(--facebook-color);
+
+  label a{
+    color: white;
+  }
+
+  color: white;
+}
+
+#google {
+  border: solid var(--google-color) 1px;
+}
+
+#google label {
+  color: var(--google-color);
+}
+
+#google:hover {
+  background-color: var(--google-color);
+
+  label {
+    color: white;
+  }
+}
+
+button>label {
+  position: unset;
+  margin: 0;
+  background-color: transparent;
+}
+
+@media (max-width: 1250px) {
+
+  #container {
+    width: 750px;
+    display: block;
+  }
+
+  #left {
+    display: none;
+  }
+
+  #right {
+    margin-top: 16px;
+    background-image: url("https://images.unsplash.com/photo-1615400014497-55726234cccb?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxNzg4Njg0Ng&ixlib=rb-1.2.1&q=85");
+    background-size: cover;
+    background-position: center;
+    box-shadow: var(--box-shadow);
+  }
+
+}
+
+@media (max-height: 850px) {
+
+  #container {
+    width: 1000px;
+    height: 600px;
+  }
+
+  #login {
+    padding-top: 20%;
+  }
+
+  #welcome {
+    margin-top: 240px;
+    font-size: 60px;
+  }
+
+  #lorem {
+    font-size: 15px;
+  }
+
+}
+
+@media (max-height: 850px) {
+  #registerFormContent #container #right #login {
+    padding: 2%;
+  }
 }
